tests/e2e/condensed_when_fail3.error
Error: syntax error in story at line 1, column 6

1|    when echo
           ^^^^

E0051: No service parent has been found.
