tests/e2e/condensed_when_fail3.story
when echo
    x = 0
